# canvas-api-cli

./: .gitignore  README.md  pyproject.toml  test.json
canvas_api_cli/: api.py  cli.py  option.py  utils.py
tests/: test_canvas_api_cli.py
