[tool.poetry]
name = "canvas-api-cli"
version = "0.2.0"
description = "Canvas LMS API wrapper"
readme="README.md"
authors = ["Sean Collings <sean.collings@atomicjolt.com>"]

[tool.poetry.dependencies]
python = "^3.10"
arc-cli = "^7.0.2"
rich = "^12.5.1"
requests = "^2.28.1"
toml = "^0.10.2"
xdg = "^5.1.1"
result = "^0.8.0"


[tool.poetry.dev-dependencies]
pytest = "^5.2"
types-toml = "^0.10.8"
types-requests = "^2.28.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
canvas = "canvas_api_cli.cli:cli"
